# wall

./: .gitignore  Cargo.toml  Procfile  README.md  package.json
assets/: .gitignore  elm.json  package-lock.json  package.json  tailwind.config.js
assets/public/: index.html  index.prod.html  main.js
assets/src/: Shared.elm
assets/src/Components/: Chat.elm  Gallery.elm
assets/src/Pages/: Top.elm  Wall.elm
src/: main.rs
