[package]
name = "wall"
version = "0.1.0"
authors = ["Dan Bruder <danb@structionsite.com>"]
edition = "2018"

[dependencies]
warp = "0.2.5"
tokio = { version = "0.2", features = ["full"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
pretty_env_logger = "0.4.0"
dotenv = "0.15.0"
