[package]
name = "wall"
version = "0.1.0"
authors = ["Dan Bruder <danb@structionsite.com>"]
edition = "2018"

[dependencies]
warp = "0.2.5"
tokio = { version = "0.2", features = ["full"] }
futures = { version = "=0.3.5", default-features = false, features = ["alloc"] }
pretty_env_logger = "0.4.0"
dotenv = "0.15.0"
uuid = { version = "0.8.1", features = ["v4", "serde"]}
bytes = "0.5.6"
serde = "1.0.118"
serde_json = "1.0.60"
kv =  { version = "0.22.0", features = ["json-value"]}
chrono = "0.4.19"
